# com.rel.mujde

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  SOURCE_URL  build.gradle  config.sh  module.prop  requirements.txt  settings.gradle
.github/workflows/: build.yml
Magisk/: module.prop
Sources/: main.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/res/drawable/: ic_cloud.xml  ic_delete.xml  ic_edit.xml  ic_script.xml
app/src/main/res/layout/: activity_main.xml  activity_script_selection.xml  fragment_apps.xml  fragment_home.xml  fragment_scripts.xml  item_remote_script.xml  item_script.xml  item_script_checkbox.xml
app/src/main/res/menu/: bottom_navigation_menu.xml  menu_scripts.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
client/: .gitignore  DEV_NOTES.md  README.md  SOURCE_URL  SUMMARY  build.gradle  settings.gradle
client/app/: build.gradle
client/app/src/main/: AndroidManifest.xml
client/app/src/main/assets/: xposed_init
client/app/src/main/res/drawable/: ic_launcher_foreground.xml
client/app/src/main/res/layout/: activity_remote_scripts.xml  fragment_apps.xml  item_app.xml  (+3 more)
lsposed_mujde/app/: build.gradle
lsposed_mujde/app/src/main/: AndroidManifest.xml
old/: CMakeLists.txt  Dockerfile  Dockerfile-python  README.md  zygote_tst.js
old/.devcontainer/: devcontainer.json
old/Sources/: Main.cpp
server/: .gitignore  README.md  dependency-reduced-pom.xml  effective-pom.xml  pom.xml  run.bat  run.sh
server/src/main/resources/: logback.xml
(+74 files in other folders)
